# pysetenv

./: .coveragerc  .gitignore  .travis.yml  CHANGES.md  LICENSE  README.md  appveyor.yml  setup.cfg  setup.py
.github/workflows/: build.yml
pysetenv/: __init__.py
test/: test_pysetenv.py
