[metadata]
license_file = LICENSE

[flake8]
extend-exclude = build,dist,deb_dist
filename = *.py

[coverage:run]
source = pysetenv
parallel = True
branch = True

[coverage:paths]
source =
  pysetenv/
  /usr/local/lib/*/site-packages/pysetenv/

[coverage:report]
exclude_lines =
  pragma: no cover
  raise NotImplementedError
  return NotImplemented
  def __repr__
